tests/test022.err
error: test022.tig:5:10: this expression does not belong to an array type
