tests/test022.tig
/* ERR: not an array */
let
  var x := 43
in
  printi(x[18])
end
